--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,7 @@ db/*.sqlite3
 /public/cache
 /public/stylesheets/compiled
 /public/system/*
+/public/signature.png
 /spec/tmp/*
 /cache
 /capybara*
