rubocop.yml update

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,6 @@
-AllCops:
-  RunRailsCops: true
-  Include:
-    - '**/Gemfile'
-    - '**/Rakefile'
-  Exclude:
-   - 'bin/*'
-   - 'db/seeds.rb'
-   - 'db/schema.rb'
-   - 'vendor/bundle/**/*'
+Rails:
+  Enabled: true
+Metrics/LineLength:
+  Max: 100
+Metrics/AbcSize:
+  Max: 18
