--- a/config/database.yml
+++ b/config/database.yml
@@ -1,3 +1,21 @@
+---
+
+<% uri = URI(ENV['POSTGRES_URL']) %>
+<% uri.password = Rails.application.secrets.postgres_password %>
+
+development: &default
+  url: <%= uri.to_s %>
+
+test:
+  <<: *default
+
+staging:
+  <<: *default
+
+production:
+  <<: *default
+
+
 # PostgreSQL. Versions 8.2 and up are supported.
 #
 # Install the pg driver:
@@ -12,15 +30,15 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: event-management_development
-  pool:     5
-  username: postgres
-  password: postgres
-  template: template0
+#development:
+#  adapter:  postgresql
+#  host:     localhost
+#  encoding: unicode
+#  database: event-management_development
+#  pool:     5
+#  username: postgres
+#  password: postgres
+#  template: template0
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -40,22 +58,22 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: event-management_test
-  pool:     5
-  username: postgres
-  password: postgres
-  template: template0
-
-production:
-  adapter:  postgresql
-  host:     localhost
-  encoding: unicode
-  database: event-management_production
-  pool:     5
-  username: postgres
-  password: postgres
-  template: template0
+#test:
+#  adapter:  postgresql
+#  host:     localhost
+#  encoding: unicode
+#  database: event-management_test
+#  pool:     5
+#  username: postgres
+#  password: postgres
+#  template: template0
+#
+#production:
+#  adapter:  postgresql
+#  host:     localhost
+#  encoding: unicode
+#  database: event-management_production
+#  pool:     5
+#  username: postgres
+#  password: postgres
+#  template: template0
