--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
 version: '3.4'
 
 services:
-  postgres:
+  postgres-em:
     image: postgres:9.6-alpine
     environment:
-      POSTGRES_USER: postgres_em
+      POSTGRES_USER: postgres
       POSTGRES_DB:   event_management
       POSTGRES_PASSWORD_FILE: /run/secrets/em_postgres_password
-    ports:   [ '5435:5432' ]
-    volumes: [ 'postgres:/var/lib/postgresql/data' ]
+    ports:   [ '5432:5432' ]
+    volumes: [ 'em_postgres:/var/lib/postgresql/data' ]
     secrets: [ em_postgres_password ]
 
-  redis:
+  redis-em:
     image:   redis:3.2-alpine
     command: [ sh, -c, docker-entrypoint.sh --requirepass "$$(cat /run/secrets/em_redis_password)" ]
     ports:   [ '6390:6379' ]
-    volumes: [ 'redis:/data' ]
+    volumes: [ 'em_redis:/data' ]
     secrets: [ em_redis_password ]
 
   website:
     image: pari-em
     depends_on:
-      - postgres
-      - redis
+      - postgres-em
+      - redis-em
     ports: [ '3001:3000' ]
     environment:
-      POSTGRES_URL:       postgresql://postgres_em@postgres:5435/event_management?encoding=utf8&pool=5&timeout=5000
+      POSTGRES_URL:       postgresql://postgres:postgres@postgres-em:5432/event_management?encoding=utf8&pool=5&timeout=5000
       REDIS_CACHE_URL:    redis://:@redis:6390/0/cache
       REDIS_SESSIONS_URL: redis://:@redis:6390/0/sessions
       REDIS_JOBS_URL:     redis://:@redis:6390/0/jobs
@@ -43,11 +43,11 @@ services:
   sidekiq:
     image: pari-em
     depends_on:
-      - redis
-      - postgres
+      - redis-em
+      - postgres-em
     command: sidekiq -C config/sidekiq.yml.erb
     environment:
-      POSTGRES_URL: postgresql://postgres_em@postgres:5435/event_management?encoding=utf8&pool=5&timeout=5000
+      POSTGRES_URL: postgresql://postgres@postgres-em:5435/event_management?encoding=utf8&pool=5&timeout=5000
       REDIS_JOBS_URL: redis://:@redis:6390/0/jobs
     secrets:
       - em_postgres_password
@@ -62,5 +62,5 @@ secrets:
     external: true
 
 volumes:
-  redis:
-  postgres:
+  em_redis:
+  em_postgres:
