alchemy pages and elements

--- a/config/alchemy/elements.yml
+++ b/config/alchemy/elements.yml
@@ -8,12 +8,75 @@
   contents:
   - name: headline
     type: EssenceText
-    default: :article_headline
+#    default: :article_headline
     hint: true
   - name: picture
     type: EssencePicture
     hint: true
   - name: text
     type: EssenceRichtext
-    default: :article_text
+#    default: :article_text
     hint: true
+- name: slider
+  unique: true
+  contents:
+  - name: banner_text
+    type: EssenceText
+  - name: picture1
+    type: EssencePicture
+    hint: true
+  - name: picture2
+    type: EssencePicture
+    hint: true
+  - name: picture3
+    type: EssencePicture
+    hint: true
+- name: info_boxes
+  unique: true
+  contents:
+  - name: info_box
+    type: info_box
+- name: info_box
+  contents:
+  - name: headline
+    type: EssenceText
+  - name: text
+    type: EssenceText
+  - name: picture
+    type: EssencePicture
+- name: recent_seminars
+- name: testemonials
+- name: contact_box
+- name: headline
+- name: contactform
+- name: text
+
+- name: team_member
+  contents:
+  - name: name
+    type: EssenceText
+  - name: picture
+    type: EssencePicture
+  - name: position
+    type: EssenceText
+  - name: description
+    type: EssenceText
+  - name: phone
+    type: EssenceText
+  - name: email
+    type: EssenceText
+- name: location
+  contents:
+  - name: name
+    type: EssenceText
+  - name: picture
+    type: EssencePicture
+  - name: text
+    type: EssenceRichtext
+  - name: address
+    type: EssenceRichtext
+  - name: phone
+    type: EssenceText
+  - name: email
+    type: EssenceText
+
