Alchemy contact form

--- a/config/alchemy/config.yml
+++ b/config/alchemy/config.yml
@@ -122,8 +122,8 @@ mailer:
   mail_from: your.mail@your-domain.com
   mail_to: your.mail@your-domain.com
   subject: A new contact form message
-  fields: [salutation, firstname, lastname, address, zip, city, phone, email, message]
-  validate_fields: [lastname, email]
+  fields: [salutation, name, address, zip, city, phone, email, message, contact_form_id]
+  validate_fields: [email]
 
 # === User roles
 #
